--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,7 @@
   </script>
   <script src="gmaps-utility-library/markerclustererplus/src/markerclusterer_packed.js"></script>
   <script src="gmaps-utility-library/geolocationmarker/src/geolocationmarker-compiled.js"></script>
+  <script src="gmaps-utility-library/geolocationmarker/src/infobox_packed.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
@@ -44,13 +45,15 @@
   <div id="main" role="main">
     <div id="map" onselectstart="return false;" style="-moz-user-select: none;"></div>
     <nav id="menu" class="clearfix">
-      <a href="#">
-        <i class="icon icon-plane"></i>Get Direction
+      <a href="#" id="getDirection" class="menu-item">
+        <i class="icon icon-plane hover-rotate"></i>Get Direction
       </a>
-      <a href="#">
-        Destinations
-        <ul id="waypoints"></ul>
-      </a>
+      <span class="toggle">
+        <a href="#" class="menu-item handle">
+          <i class="icon icon-map-marker hover-scale"></i>Destinations
+        </a>
+        <ul id="waypoints" class="target"></ul>
+      </span>
     </nav>
   </div>
 
