--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,8 @@
   </script>
   <script src="/gmaps-utility-library/markerclustererplus/src/markerclusterer_packed.js"></script>
   <script src="/gmaps-utility-library/geolocationmarker/src/geolocationmarker-compiled.js"></script>
-  <script src="/gmaps-utility-library/geolocationmarker/src/infobox_packed.js"></script>
+  <script src="/gmaps-utility-library/infobox/src/infobox_packed.js"></script>
+  <script src="/js/libs/oms.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
   <script src="/bootstrap/js/bootstrap.min.js"></script>
@@ -29,14 +30,13 @@
 <body>
 
   <header>
-    <div class="user_info">
+    <div class="user_info clearfix">
       <div class="login">
         <div class="fb-login-button" data-scope="user_likes,user_photos,user_checkins,friends_checkins,user_location,friends_location,friends_photos,user_status,friends_status"></div>
       </div>
       <div class="user_name"></div>
       <div class="user_img"></div>
     </div>
-    <div class="clearfix"></div>
   </header>
 
   <a href="javascript:void(0)" id="logo">
